k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: makeup-ingress
  namespace: makeup-app

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/load-balancer-name: makeup-alb

spec:
  ingressClassName: alb

  rules:

  - http:
      paths:

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend-service

            port:
              number: 5000
